--- a/assets/src/user/myNav.less
+++ b/assets/src/user/myNav.less
@@ -4,7 +4,7 @@
 	top: @navbar-height - 8px;
 	width: 100px;
 	height: 8px;
-	background: @color-one;
+	background: @white;
 	transition: all .5s ease;
 }
 nav.navbar {
