home page links

--- a/assets/src/user/slides.less
+++ b/assets/src/user/slides.less
@@ -8,8 +8,14 @@
 		background-position-y: 150%;
 		background-attachment: fixed;
 		height: 80vh;
+		position: relative;
 		.container {
 			padding-top: @navbar-height;
+			position: absolute;
+			bottom: 60%;
+		}
+		a {
+			color: @black;
 		}
 	}
 	&#slide2 {
