--- a/assets/src/user/myNav.less
+++ b/assets/src/user/myNav.less
@@ -6,6 +6,10 @@
 	height: 8px;
 	background: @white;
 	transition: all .5s ease;
+	display: none;
+	@media(min-width: @screen-xs-max){
+		display: block;
+	}
 }
 nav.navbar {
 	#nav2, #nav5 {
