--- a/assets/src/user/slides.less
+++ b/assets/src/user/slides.less
@@ -47,6 +47,11 @@
 			-webkit-box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.75);
 			-moz-box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.75);
 			box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.75);;
+			&:hover {
+				-webkit-box-shadow: 8px 8px 10px 0px rgba(0,0,0,0.75);
+				-moz-box-shadow: 8px 8px 10px 0px rgba(0,0,0,0.75);
+				box-shadow: 8px 8px 10px 0px rgba(0,0,0,0.75);;
+			}
 		}
 		a {
 			color: @color-one;
