indicator works better now

--- a/assets/src/user/vars.less
+++ b/assets/src/user/vars.less
@@ -1,9 +1,9 @@
 // Colors:
 @color-one: #112A60;
-@color-two: #112A60;
-@color-three: #7EC5AA;
-@color-four: #FFC0A3;
-@color-five: white;
+@color-two: #112A60; // BLUE
+@color-three: #7EC5AA; // GREEN
+@color-four: #FFC0A3; // ORANGE
+@color-five: #FFF;
 // OLD
 // @color-one: #1e812b;
 // @color-two: lighten(#1862a9, 10%);
