--- a/assets/src/user/myNav.less
+++ b/assets/src/user/myNav.less
@@ -11,6 +11,14 @@
 		display: block;
 	}
 }
+#mobile-indicator{
+	position: fixed;
+	left:0;
+	top: 50px;
+	height:10px;
+	background: #000;
+	z-index: 999;
+}
 nav.navbar {
 	#nav2, #nav5 {
 		a:hover {
