--- a/assets/src/user/main.less
+++ b/assets/src/user/main.less
@@ -1,8 +1,57 @@
 body {
 	font-family: @font-main;
 }
+#slide1 {
+	padding-top: 50px;
+}
 #slide2{
 	#name {
 		border-bottom: 4px solid @white;
+	}
+}
+a.shape-link {
+	display: block;
+	transition: transform .5s ease-out;
+	.triangle {
+		border-left: 55px solid transparent;
+		border-right: 55px solid transparent;
+		width: 0;
+		margin: 0 auto;
+		&.flipped {
+			transform: rotate(180deg);
+		}
+		&.color-blue {
+			border-bottom: 55px solid @color-two;
+		}
+		&.color-green {
+			border-bottom: 55px solid @color-three;
+		}
+		&.color-pink {
+			border-bottom: 55px solid @color-four;
+		}
+	}
+	.square {
+		margin: 0 auto;
+		text-align: left;
+		width: 110px;
+		height: 40px;
+		color: @white;
+		h1 {
+			margin: 0 0 0 45px;
+		}
+		&.color-blue {
+			background-color: @color-two;
+		}
+		&.color-green {
+			background-color: @color-three;
+		}
+		&.color-pink {
+			background-color: @color-four;
+		}
+	}
+	&:hover {
+		text-decoration: none;
+		transform: translateY(-15px);
+		transition: transform .5s ease-out;
 	}
 }
