--- a/assets/src/user/vars.less
+++ b/assets/src/user/vars.less
@@ -1,9 +1,9 @@
 // Colors:
-@color-one: #112A60;
-@color-two: #112A60; // BLUE
-@color-three: #7EC5AA; // GREEN
-@color-four: #FFC0A3; // ORANGE
-@color-five: #FFF;
+@color-one: #000;
+@color-two: #1c1a1a; // BLUE
+@color-three: #3f0e0e; // GREEN
+@color-four: #9d0000; // ORANGE
+@color-five: #303030;
 // OLD
 // @color-one: #1e812b;
 // @color-two: lighten(#1862a9, 10%);
