--- a/assets/src/variables.less
+++ b/assets/src/variables.less
@@ -369,11 +369,11 @@
 //=== Inverted navbar
 // Reset inverted navbar basics
 @navbar-inverse-color:                      lighten(@gray-light, 15%);
-@navbar-inverse-bg:                         rgba(0, 0, 0, 0.5); // #222;
+@navbar-inverse-bg:                         rgba(255, 255, 255, 0.8); // #222;
 @navbar-inverse-border:                     transparent; //darken(@navbar-inverse-bg, 10%);
 
 // Inverted navbar links
-@navbar-inverse-link-color:                 @white;// lighten(@gray-light, 15%);
+@navbar-inverse-link-color:                 @black;// lighten(@gray-light, 15%);
 @navbar-inverse-link-hover-color:           #fff;
 @navbar-inverse-link-hover-bg:              transparent;
 @navbar-inverse-link-active-color:          @navbar-inverse-link-hover-color;
