--- a/assets/src/user/slides.less
+++ b/assets/src/user/slides.less
@@ -1,11 +1,21 @@
 .slide {
+	&#slide1,
+	&#slide2,
+	&#slide3,
+	&#slide4,
+	&#slide5 {
+		color: @white;
+		a {
+			color: @white;
+		}
+	}
 	// Backgrounds
 	&#slide1 {
 		// background: @color-one;
-		background-image: url('../../dist/img/header.jpg');
+		background-image: url('../img/testing.png');
 		background-size: cover;
 		background-repeat: no-repeat;
-		background-position-y: 150%;
+		background-position-y: 33%;
 		background-attachment: fixed;
 		min-height: 80vh;
 		position: relative;
@@ -22,16 +32,10 @@
 				top:15%;
 			}
 		}
-		a {
-			color: @black;
-		}
 	}
 	&#slide2 {
 		background: @color-two;
 		padding: 25px 0;
-		h1 {
-			color: @white;
-		}
 		img {
 			width: 100%;
 			@media(max-width: @screen-xs-max){
@@ -40,42 +44,99 @@
 				margin: 0 auto;
 			}
 		}
-
 	}
 	&#slide3 {
 		background: @color-three;
-		padding-bottom: 25px;
+		// padding-bottom: 25px;
+		display: table;
 		.screenshots {
-			margin-bottom: 25px;
+			// margin-bottom: 25px;
+			margin-left: -15px;
+			margin-right: -15px;
+			.col-sm-4 {
+				padding-left: 0;
+				padding-right: 0;
+			}
+			.shot {
+				width: 33.33333%;
+				float: left;
+				position: relative;
+				border: 1px solid rgba(0,0,0,0.7);
+				.overlay {
+					position: absolute;
+					// top: 0;
+					// bottom: 0;
+					// left: 0;
+					// right: 0;
+					// z-index: 1;
+					display: none;
+					background: rgba(0,0,0,0.0);
+					transition: all .4s ease;
+					&.hovered {
+						background: rgba(0,0,0,0.5);
+						transition: all .4s ease;
+						display: block;
+						top: 0;
+						bottom: 0;
+						left: 0;
+						right: 0;
+						z-index: 1;
+						// bottom: 0;
+						// transition: all .4s ease;
+					}
+				}
+			}
+
 		}
 		.work-preview {
 			max-width: 100%;
-			-webkit-box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.75);
-			-moz-box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.75);
-			box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.75);;
-			&:hover {
-				-webkit-box-shadow: 8px 8px 10px 0px rgba(0,0,0,0.75);
-				-moz-box-shadow: 8px 8px 10px 0px rgba(0,0,0,0.75);
-				box-shadow: 8px 8px 10px 0px rgba(0,0,0,0.75);;
-			}
+			// -webkit-box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.75);
+			// -moz-box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.75);
+			// box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.75);;
+			// &:hover {
+			// 	-webkit-box-shadow: 8px 8px 10px 0px rgba(0,0,0,0.75);
+			// 	-moz-box-shadow: 8px 8px 10px 0px rgba(0,0,0,0.75);
+			// 	box-shadow: 8px 8px 10px 0px rgba(0,0,0,0.75);;
+			// }
 		}
 		a {
 			color: @color-one;
 			font-weight: 700;
+			position: relative;
+			display: block;
+			overflow: hidden;
 			&:focus, &:active, &:hover {
 				color: darken(@color-one, 10%);
+				.work-title {
+					bottom: 0;
+					transition: bottom .4s ease;
+				}
+			}
+			.work-title {
+				position: absolute;
+				bottom: -100%;
+				left: 0;
+				right: 0;
+				background-color: rgba(0,0,0,0.5);
+				margin: 0;
+				display: block;
+				padding: 15px 0 15px 30px;
+				color: @white;
+				font-weight: 700;
+				transition: bottom .4s ease;
 			}
 		}
 	}
 	&#slide4 {
 		padding: 25px 0;
 		background: @color-four;
-
+		.progress-bar {
+			background-color: @color-three;
+		}
 	}
 	&#slide5 {
 		background: @color-one;
 		padding: 25px 0;
-		color: @white;
 		a {
 			color: @white;
 			&:focus, &:active, &:hover {
