--- a/assets/src/user/slides.less
+++ b/assets/src/user/slides.less
@@ -64,25 +64,20 @@
 				border: 1px solid rgba(0,0,0,0.7);
 				.overlay {
 					position: absolute;
-					// top: 0;
-					// bottom: 0;
-					// left: 0;
-					// right: 0;
-					// z-index: 1;
-					display: none;
-					background: rgba(0,0,0,0.0);
+					display: block;
+					background: rgba(0,0,0,0.5);
 					transition: all .4s ease;
+					z-index: 1;
+					top: 0;
+					bottom: 0;
+					left: 0;
+					right: 0;
 					&.hovered {
 						background: rgba(0,0,0,0.5);
 						transition: all .4s ease;
-						display: block;
-						top: 0;
-						bottom: 0;
-						left: 0;
-						right: 0;
+						display: none;
+						position: initial;
 						z-index: 1;
-						// bottom: 0;
-						// transition: all .4s ease;
 					}
 				}
 			}
