--- a/assets/src/user/vars.less
+++ b/assets/src/user/vars.less
@@ -1,20 +1,16 @@
 // Colors:
 @color-one: #000;
-@color-two: #1c1a1a; // BLUE
-@color-three: #3f0e0e; // GREEN
+@color-two: #1c1a1a; // gray
+@color-three: #3f0e0e; // red
 @color-four: #9d0000; // ORANGE
 @color-five: #303030;
-// OLD
-// @color-one: #1e812b;
-// @color-two: lighten(#1862a9, 10%);
-// @color-three: #a82c22;
-// @color-four: #ecb200;
+@color-facebook: #3b5998;
+@color-email: #337ab7;
+@color-linkedin: #00a0dc;
+@color-resume: #18453b;
 
 @white: #FFF;
 @black: #000;
-@color-facebook: #3b5999;
-@color-linkedin: #1985bc;
-@color-phone: #08ba28;
 
 
 // Text:
