--- a/assets/src/user/main.less
+++ b/assets/src/user/main.less
@@ -11,13 +11,15 @@ body {
 }
 a.shape-link {
 	display: block;
-	transition: transform .5s ease-out;
+	transition: transform .3s ease-out;
 	.triangle {
 		border-left: 55px solid transparent;
 		border-right: 55px solid transparent;
 		width: 0;
 		margin: 0 auto;
 		&.flipped {
+			-webkit-transform: rotate(180deg);
+			-ms-transform: rotate(180deg);
 			transform: rotate(180deg);
 		}
 		&.color-blue {
@@ -51,7 +53,9 @@ a.shape-link {
 	}
 	&:hover {
 		text-decoration: none;
+		-webkit-transform: translateY(-15px);
+		-ms-transform: translateY(-15px);
 		transform: translateY(-15px);
-		transition: transform .5s ease-out;
+		transition: transform .3s ease-out;
 	}
 }
