moved progress styles to less

--- a/assets/src/user/myNav.less
+++ b/assets/src/user/myNav.less
@@ -25,17 +25,17 @@ nav.navbar {
 		font-weight: 700;
 	}
 	#nav2, #nav5 {
-		a:hover {
+		a:hover, a:active, &:focus {
 			color: @color-two;
 		}
 	}
 	#nav3 {
-		a:hover {
+		a:hover, a:active, &:focus {
 			color: @color-three;
 		}
 	}
 	#nav4 {
-		a:hover {
+		a:hover, a:active, &:focus {
 			color: @color-four;
 		}
 	}
