--- a/assets/src/user/slides.less
+++ b/assets/src/user/slides.less
@@ -146,6 +146,40 @@
 			}
 			.progress-bar {
 				background-color: @color-three;
+				width: 0;
+			}
+		}
+		&.show-progress {
+			.progress {
+				.progress-bar {
+			 	&#html-sk {
+					width: 100%;
+				}
+				&#css-sk {
+					width: 100%;
+				}
+				&#twig-sk {
+					width: 80%;
+				}
+				&#js-sk {
+					width: 70%;
+				}
+				&#php-sk {
+					width: 65%;
+				}
+				&#grail-sk {
+					width: 50%;
+				}
+				&#groov-sk {
+					width: 80%;
+				}
+				&#c-sk {
+					width: 79%;
+				}
+				&#pyth-sk {
+					width: 50%;
+				}
+			 }
 			}
 		}
 	}
