--- a/assets/src/user/vars.less
+++ b/assets/src/user/vars.less
@@ -1,9 +1,8 @@
 // Colors:
-@color-one: #000;
-@color-two: #1c1a1a; // gray
-@color-three: #3f0e0e; // red
-@color-four: #9d0000; // ORANGE
-@color-five: #303030;
+@color-one: #1D2A16;
+@color-two: #B2B0A3;
+@color-three: #5B844A;
+@color-four: #9C5434;
 @color-facebook: #3b5998;
 @color-email: #337ab7;
 @color-linkedin: #00a0dc;
